--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/statistics.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid statistics-container py-4 mb-5">
     <!-- Encabezado de Estadísticas -->
