--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/notifications.css') }}">
+{% endblock %}
+
 {% block content %}
 <div class="container notifications-page">
     <!-- Encabezado de Notificaciones -->
